--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- logo bottom-left -->
     <div class="logo-bl" aria-hidden="false">
       <!-- sostituisci "logo.png" con il percorso reale dell'immagine -->
-      <img src="/Users/valentinapozzi/Desktop/PROGETTO/LOGO/logo senza sfondo.png" alt="Logo VI.ZZI">
+      <img src="img/logo.png" alt="Logo">
     </div>
   </section>
 
@@ -126,7 +126,7 @@
     <div class="servizi">
       <h1>Servizi</h1>
       <!-- prima immagine servizi -->
-      <img src="/Users/valentinapozzi/Desktop/Servizi1.png" alt="Servizi VI.ZZI — immagine 1">
+      <img src="img/servizi1.png" alt="Servizi 1">
     </div>
   </section>
 
@@ -134,7 +134,7 @@
   <section id="servizi-2" class="page" style="background:#ffffff">
     <div class="servizi">
       <!-- seconda immagine servizi -->
-      <img src="/Users/valentinapozzi/Desktop/Servizi2.png" alt="Servizi VI.ZZI — immagine 2">
+      <img src="img/servizi2.png" alt="Servizi 2">
 
       <div class="cta-wrap">
         <a class="btn" href="mailto:vizzidimarketing@gmail.com?subject=Richiesta%20Preventivo">Richiedi un preventivo</a>
