--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <!-- logo bottom-left -->
     <div class="logo-bl">
-      <img src="/Users/valentinapozzi/Desktop/PROGETTO/LOGO/logo senza sfondo.png" alt="Logo VI.ZZI">
+      <img src="logo.png" alt="Logo">
     </div>
   </section>
 
