--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
     .logo-bl{position:absolute;left:12px;bottom:12px;width:60px}
     .logo-bl img{width:100%;height:auto;display:block}
 
-    /* CHI SIAMO layout */
+   /* CHI SIAMO layout */
     .chi-siamo{display:flex;flex-direction:column;gap:60px;padding-left:0;padding-right:0}
-    .chi-siamo h1{font-size:60px;background-color:#E8C89E;width:100vw;padding: 10px 0;padding-left: 50px;margin-left:-50px}
+    .chi-siamo h1{font-size:clamp(24px,6vw,40px);background-color:#E8C89E;width:100vw;padding: 10px 0;padding-left: 50px;margin-left:-50px}
     .chi-siamo p{font-size:25px;margin-top:11px}
     .chi-siamo .txt{flex:1;max-width:650px}
    <center>
-    .chi-siamo img{max-width:450px;width:100%;height:auto;border-radius:10px}
+    .chi-siamo img{max-width:100%;height:auto;display:block;border-radius:10px}
   </center>
     .chi-siamo .caption{margin-top:15px;text-align:center;font-weight:700}
 
     /* SERVIZI layout */
     .servizi{display:flex;flex-direction:column;gap:60px;align-items:center}
-    .servizi h1{font-size:60px;background-color:#8B8680; width:100vw;margin-left: calc(50% - 50vw); margin-right: calc(50% - 50vw);  padding: 10px 0;padding-left: 50px}
+    .servizi h1{font-size:clamp(24px,6vw,40px);background-color:#8B8680; width:100vw;margin-left: calc(50% - 50vw); margin-right: calc(50% - 50vw);  padding: 10px 0;padding-left: 50px}
     .servizi img{max-width:1200px;width:100%;height:auto;border-radius:10px;margin-top: 40px}
     .servizi .cta-wrap{text-align:center;margin-top:100px}
 
     /* PERCHE' NOI */
     .perche{max-width:880px;margin:0 auto;padding:0 20px}
-    .perche h1{font-size:60px;background-color:#E8C89E;width:100vw;margin-left: calc(50% - 50vw); margin-right: calc(50% - 50vw);  padding: 10px 0 10px 50px}
+    .perche h1{font-size:clamp(24px,6vw,40px);background-color:#E8C89E;width:100vw;margin-left: calc(50% - 50vw); margin-right: calc(50% - 50vw);  padding: 10px 0 10px 50px}
     .perche p{font-size:25px;margin-top:10px;padding-left:50px}
     .perche .points{margin-top:12px;padding-left:18px}
     .perche ul{list-style:none;padding-left:0;margin-top:50px}
@@ -56,7 +56,8 @@
     .perche li:nth-child(even)::before{color:#8B8680}
     .perche .conclude{font-size:25px;margin-top:100px;text-align:center}
 
-    /* CONTATTI */
+
+     /* CONTATTI */
     .contatti{display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;min-height:100vh}
     .contatti h1{font-size:clamp(32px,8vw,60px);line-height:1.05;margin-bottom:20px;margin-top:0}
     .contatti .btns{display:flex;gap:20px;justify-content:center;margin-top:16px}
@@ -64,8 +65,10 @@
 
     /* Responsive */
     @media (max-width:900px){
-      .chi-siamo{flex-direction:column}
-      .nav{right:18px;gap:12px}
+      .chi-siamo{flex-direction:column;align-items:center;padding:20px}
+      .servizi{flex-direction:column;align-items:center;padding:20px}
+      .perche{padding-left:20px;padding-right:20px}
+      .nav{flex-direction:column;top:10px;right:10px;gap:10px}
       .logo-bl{left:18px;bottom:18px;width:90px}
     }
   </style>
