--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root{--accent:#E8C89E;--muted:#6b7280}
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%;margin:0;padding:0;overflow-x:hidden}
-    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:#fff;color:#0b1220}
+    body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;background:#fff;color:#0b1220;overflow-x: hidden;}
     a{color:inherit;text-decoration:none}
 
     /* Layout: full-page sections */
